html,css,js compleated

--- a/index.html
+++ b/index.html
@@ -282,15 +282,15 @@
           <div class="wave1"></div>
           <div class="wave1"></div>
         </div>
-        <img src="img/1.jpg" />
-        <h5>
+        <img src="img/1.jpg" id="poster-master-play" />
+        <h5 id="title">
           On My Way<br />
           <div class="subtitle">Alan Walker</div>
         </h5>
         <div class="icon">
-          <i class="bi bi-skip-start-fill"></i>
-          <i class="bi bi-play-fill"></i>
-          <i class="bi bi-skip-end-fill"></i>
+          <i class="bi bi-skip-start-fill" id="back"></i>
+          <i class="bi bi-play-fill" id="masterplay"></i>
+          <i class="bi bi-skip-end-fill" id="next"></i>
         </div>
         <span id="currentstart">0:00</span>
         <div class="bar">
@@ -301,7 +301,7 @@
         <span id="currentend">0:00</span>
 
         <div class="vol">
-          <i class="bi bi-volume-down-fill"></i>
+          <i class="bi bi-volume-down-fill" id="vol_icon"></i>
           <input type="range" id="vol" min="0" value="0" max="100" />
           <div class="vol-bar"></div>
           <div class="dot" id="vol-dot"></div>
