diffrent img changed

--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
             <input type="text" placeholder="Search Music..." />
           </div>
           <div class="user">
-            <img src="img/KDS CODER.png" />
+            <img src="img/user1.jpg" />
           </div>
         </nav>
         <div class="content">
-          <h1>Walker-fade</h1>
+          <h1>Alan-Walker</h1>
           <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. <br />
             Voluptatibus recusandae exercitationem temporibus?
@@ -142,7 +142,7 @@
             <!-- alan song1 -->
             <li class="songitem">
               <div class="img-play">
-                <img src="img/1.jpg" />
+                <img src="img/10.jpg" />
                 <i class="bi playlistplay bi-play-circle-fill" id="10"></i>
               </div>
               <h5>
@@ -154,7 +154,7 @@
             <!-- alan song2 -->
             <li class="songitem">
               <div class="img-play">
-                <img src="img/2.jpg" />
+                <img src="img/11.jpg" />
                 <i class="bi playlistplay bi-play-circle-fill" id="11"></i>
               </div>
               <h5>
@@ -166,7 +166,7 @@
             <!-- alan song3 -->
             <li class="songitem">
               <div class="img-play">
-                <img src="img/3.jpg" />
+                <img src="img/12.jpg" />
                 <i class="bi playlistplay bi-play-circle-fill" id="12"></i>
               </div>
               <h5>
@@ -178,7 +178,7 @@
             <!-- alan song4 -->
             <li class="songitem">
               <div class="img-play">
-                <img src="img/4.jpg" />
+                <img src="img/13.jpg" />
                 <i class="bi playlistplay bi-play-circle-fill" id="13"></i>
               </div>
               <h5>
@@ -190,7 +190,7 @@
             <!-- alan song5 -->
             <li class="songitem">
               <div class="img-play">
-                <img src="img/5.jpg" />
+                <img src="img/14.jpg" />
                 <i class="bi playlistplay bi-play-circle-fill" id="14"></i>
               </div>
               <h5>
@@ -202,7 +202,7 @@
             <!-- alan songv6-->
             <li class="songitem">
               <div class="img-play">
-                <img src="img/6.jpg" />
+                <img src="img/15.jpg" />
                 <i class="bi playlistplay bi-play-circle-fill" id="15"></i>
               </div>
               <h5>
